--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,29 +19,22 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="50dp"
                     android:id="@+id/imageView4"
                     android:background="#fff5ff5d"
                     android:layout_weight="1" />
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="70dp"
                     android:id="@+id/imageView5"
                     android:background="#ff57c9ff"
                     android:layout_weight="2" />
 
                 <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#fff28cff"
-                    android:layout_weight="3" />
-
-                <LinearLayout
                     android:id="@+id/fragment_container"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="400dp"
                     android:orientation="vertical"
                     android:background="#ffff393b"
                     android:layout_weight="5"/>
