แก้หน้าแรกนิดนึง ลบ fragment ออก 1 ตัว ลืมไปว่ามันเปลี่ยนช่วงรูป dj ด้วย

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,14 @@
         android:background="#ff24fff8"
         android:clickable="false"
         android:layout_alignParentBottom="true"
-        android:id="@+id/linearMenu" />
+        android:id="@+id/linearMenu" >
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/horizontalScrollView">
+
+        </HorizontalScrollView>
+    </LinearLayout>
 
 </RelativeLayout>
