--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,61 +2,52 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"   tools:context=".MainActivity">
 
-
-    <ScrollView
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/scrollView"
-        android:fadingEdge="none"
-        android:layout_above="@+id/scrollView"
-        android:fillViewport="false">
-
-            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:id="@+id/linearLayout">
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:id="@+id/imageView4"
-                    android:background="#fff5ff5d"
-                    android:layout_weight="1" />
-
-                <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:id="@+id/imageView5"
-                    android:background="#ff57c9ff"
-                    android:layout_weight="2" />
-
-                <LinearLayout
-                    android:id="@+id/fragment_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    android:orientation="vertical"
-                    android:background="#ffff393b"
-                    android:layout_weight="5"/>
-
-            </LinearLayout>
-    </ScrollView>
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#ff24fff8"
-        android:clickable="false"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/linearMenu" >
-
-        <HorizontalScrollView
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
+        <ImageView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/horizontalScrollView">
+            android:layout_height="0dp"
+            android:id="@+id/imageView4"
+            android:background="#fff5ff5d"
+            android:layout_weight="1" />
 
-        </HorizontalScrollView>
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:id="@+id/imageView5"
+            android:background="#ff57c9ff"
+            android:layout_weight="1.5" />
+
+
+        <LinearLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="8"
+            android:orientation="vertical"
+            android:background="#ffff393b"
+            />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="00dp"
+            android:background="#ff24fff8"
+            android:clickable="false"
+            android:layout_weight="1"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/linearMenu" >
+
+            <HorizontalScrollView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/horizontalScrollView">
+
+            </HorizontalScrollView>
+        </LinearLayout>
     </LinearLayout>
 
 </RelativeLayout>
