--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -68,7 +68,9 @@
             android:id="@+id/bt_youtube"
             android:textSize="10dp"
             android:layout_alignTop="@+id/imageView3"
-            android:layout_toEndOf="@+id/imageView3" />
+            android:layout_toEndOf="@+id/imageView3"
+            android:background="@android:color/black"
+            android:textColor="@android:color/white" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -78,7 +80,9 @@
             android:id="@+id/bt_list"
             android:textSize="10dp"
             android:layout_alignBottom="@+id/imageView3"
-            android:layout_alignEnd="@+id/bt_youtube" />
+            android:layout_alignEnd="@+id/bt_youtube"
+            android:background="@android:color/black"
+            android:textColor="@android:color/white" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -88,7 +92,9 @@
             android:id="@+id/bt_play"
             android:textSize="10dp"
             android:layout_alignTop="@+id/imageView3"
-            android:layout_toStartOf="@+id/imageView3" />
+            android:layout_toStartOf="@+id/imageView3"
+            android:textColor="@android:color/white"
+            android:background="@android:color/black" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
@@ -98,7 +104,9 @@
             android:textSize="7dp"
             android:id="@+id/bt_lyrics"
             android:layout_alignBottom="@+id/imageView3"
-            android:layout_alignEnd="@+id/bt_play" />
+            android:layout_alignEnd="@+id/bt_play"
+            android:background="@android:color/black"
+            android:textColor="@android:color/white" />
 
         <SeekBar
             android:layout_width="200dp"
