--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,57 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent" android:background="#ffff393b"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    tools:context="${relativePackage}.${activityClass}">
 
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:id="@+id/imageView3"
-        android:src="@drawable/bodyslam"
-        android:layout_gravity="center_horizontal"
-        android:layout_alignParentLeft="false"
-        android:layout_alignParentTop="false"
-        android:layout_centerHorizontal="true" />
+    <RelativeLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:background="#ffffff"
+        android:clickable="false"
+        android:layout_weight="1"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/linearMenu" >
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"/>
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="50dp"
-        android:layout_height="45dp"
-        android:text="MV"
-        android:id="@+id/bt_youtube"
-        android:textSize="10dp"
-        android:layout_alignTop="@+id/imageView3"
-        android:layout_toEndOf="@+id/imageView3" />
+        <com.viewpagerindicator.CirclePageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout >
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="50dp"
-        android:layout_height="45dp"
-        android:text="List"
-        android:id="@+id/bt_list"
-        android:textSize="10dp"
-        android:layout_alignBottom="@+id/imageView3"
-        android:layout_alignEnd="@+id/bt_youtube" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="2"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="50dp"
-        android:layout_height="45dp"
-        android:text=">"
-        android:id="@+id/bt_play"
-        android:textSize="10dp"
-        android:layout_alignTop="@+id/imageView3"
-        android:layout_toStartOf="@+id/imageView3" />
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="150dp"
+            android:id="@+id/imageView3"
+            android:src="@drawable/bodyslam"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="50dp"
-        android:layout_height="45dp"
-        android:text="Lyrics"
-        android:textSize="7dp"
-        android:id="@+id/bt_lyrics"
-        android:layout_alignBottom="@+id/imageView3"
-        android:layout_alignEnd="@+id/bt_play" />
-</RelativeLayout>
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:text="MV"
+            android:id="@+id/bt_youtube"
+            android:textSize="10dp"
+            android:layout_alignTop="@+id/imageView3"
+            android:layout_toEndOf="@+id/imageView3" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:text="List"
+            android:id="@+id/bt_list"
+            android:textSize="10dp"
+            android:layout_alignBottom="@+id/imageView3"
+            android:layout_alignEnd="@+id/bt_youtube" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:text=">"
+            android:id="@+id/bt_play"
+            android:textSize="10dp"
+            android:layout_alignTop="@+id/imageView3"
+            android:layout_toStartOf="@+id/imageView3" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="50dp"
+            android:layout_height="45dp"
+            android:text="Lyrics"
+            android:textSize="7dp"
+            android:id="@+id/bt_lyrics"
+            android:layout_alignBottom="@+id/imageView3"
+            android:layout_alignEnd="@+id/bt_play" />
+    </RelativeLayout>
+</LinearLayout>
