--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,15 +17,29 @@
         android:layout_alignParentBottom="true"
         android:id="@+id/linearMenu" >
 
-        <android.support.v4.view.ViewPager
+        <!--<android.support.v4.view.ViewPager-->
+            <!--android:id="@+id/pager"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="120dp"/>-->
+
+        <com.example.user.seedapp.com.add.view.AutoScrollViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="120dp"/>
+            android:layout_height="120dp"
+            />
+
 
         <com.viewpagerindicator.CirclePageIndicator
             android:id="@+id/indicator"
             android:layout_width="match_parent"
-            android:layout_height="10dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="10dp"
+            app:radius="4dp"
+            app:fillColor="#88FF0000"
+            app:pageColor="#FF888888"
+            app:strokeColor="#FF000000"
+            app:strokeWidth="2dp"
+            app:centered="true"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout >
