--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -62,11 +62,11 @@
                 android:layout_height="0dp"
                 android:layout_weight="1">
 
-                <TextView
+
+                <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text=""
+                    android:text="TEXT TO DJ"
                     android:id="@+id/text_dj"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true" />
