--- a/app/src/main/res/layout/fragment_list_privilege.xml
+++ b/app/src/main/res/layout/fragment_list_privilege.xml
@@ -4,9 +4,9 @@
     android:id="@+id/swipeLayout"
     android:layout_height="match_parent">
 
-    <ExpandableListView
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/listView"
-        />
+        android:clickable="true" />
 </android.support.v4.widget.SwipeRefreshLayout>
