--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,14 +11,14 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/imageView4"
-            android:background="#ff436eff"
+            android:background="#1083d4"
             android:layout_weight="1" />
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/imageView5"
-            android:background="#ffff3443"
+            android:background="#e9031f"
             android:layout_weight="1.5" />
 
 
@@ -28,7 +28,7 @@
             android:layout_height="0dp"
             android:layout_weight="8"
             android:orientation="vertical"
-            android:background="#ffff3155"
+            android:background="#e9031f"
             />
 
         <LinearLayout
