--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -50,68 +50,101 @@
         android:layout_weight="2"
         android:orientation="vertical"
         android:id="@+id/linearLayout">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginTop="10dp"
+            android:text="Now Playing : คิดถึง - Bodyslam"
+            android:id="@+id/textNowPlaying"
+            android:layout_centerHorizontal="true"
+            android:textColor="@android:color/white" />
+
+        <View
+            android:layout_width="300dp"
+            android:layout_height="2dp"
+            android:background="@android:color/black"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+            android:layout_below="@+id/textNowPlaying"
+            android:id="@+id/viewseparate"></View>
 
         <ImageView
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_marginTop="20dp"
+            android:layout_below="@+id/viewseparate"
             android:id="@+id/imageView3"
             android:src="@drawable/bodyslam"
             android:layout_gravity="center_horizontal"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:layout_alignStart="@id/imageView3"
+            android:layout_marginTop="10dp"
+            android:scaleType="fitXY" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
             android:text="MV"
             android:id="@+id/bt_youtube"
-            android:textSize="10dp"
             android:layout_alignTop="@+id/imageView3"
             android:layout_toEndOf="@+id/imageView3"
             android:background="@android:color/black"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:shadowColor="@android:color/darker_gray"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
             android:text="List"
             android:id="@+id/bt_list"
-            android:textSize="10dp"
             android:layout_alignBottom="@+id/imageView3"
             android:layout_alignEnd="@+id/bt_youtube"
             android:background="@android:color/black"
-            android:textColor="@android:color/white" />
-
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
-            android:text=">"
-            android:id="@+id/bt_play"
-            android:textSize="10dp"
-            android:layout_alignTop="@+id/imageView3"
-            android:layout_toStartOf="@+id/imageView3"
             android:textColor="@android:color/white"
-            android:background="@android:color/black" />
+            android:layout_marginBottom="20dp"
+            android:shadowColor="@android:color/darker_gray"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
 
         <Button
             style="?android:attr/buttonStyleSmall"
-            android:layout_width="50dp"
-            android:layout_height="45dp"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
+            android:text="Play"
+            android:id="@+id/bt_play"
+            android:layout_alignTop="@+id/imageView3"
+            android:textColor="@android:color/white"
+            android:background="@android:color/black"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentStart="false"
+            android:layout_toStartOf="@+id/imageView3"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:shadowColor="@android:color/darker_gray"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="60dp"
+            android:layout_height="35dp"
             android:text="Lyrics"
-            android:textSize="7dp"
             android:id="@+id/bt_lyrics"
             android:layout_alignBottom="@+id/imageView3"
             android:layout_alignEnd="@+id/bt_play"
             android:background="@android:color/black"
-            android:textColor="@android:color/white" />
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="20dp"
+            android:shadowColor="@android:color/darker_gray"
+            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
 
         <SeekBar
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:id="@+id/seekBar"
             android:layout_below="@+id/imageView3"
             android:layout_centerHorizontal="true" />
@@ -128,11 +161,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Bodyslam-เรือเล็กควรออกจากฝั่ง"
+            android:text="Next song : ไม่ต่างกัน - 25 Hours"
             android:id="@+id/textNameSong"
             android:layout_below="@+id/view"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:textColor="@android:color/white" />
     </RelativeLayout>
 </LinearLayout>
