--- a/app/src/main/res/layout/listitem.xml
+++ b/app/src/main/res/layout/listitem.xml
@@ -5,10 +5,12 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Test"
         android:id="@+id/textView"
-        android:textSize="70dp"
-        android:layout_gravity="center" />
+        android:textSize="30dp"
+        android:layout_gravity="center"
+        android:gravity="center_vertical"
+        android:textColor="@android:color/white" />
 </LinearLayout>
