--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:layout_height="0dp"
             android:id="@+id/imageView5"
             android:background="#e9031f"
-            android:layout_weight="1.5" />
+            android:layout_weight="1.5"
+            android:src="@drawable/ads" />
 
 
         <LinearLayout
