--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,10 @@
             android:layout_height="0dp"
             android:id="@+id/imageView4"
             android:background="#1083d4"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:src="@drawable/vivo"
+            android:scaleType="center"
+            android:paddingTop="5dp" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -20,7 +23,8 @@
             android:id="@+id/imageView5"
             android:background="#e9031f"
             android:layout_weight="1.2"
-            android:src="@drawable/ads" />
+            android:src="@drawable/ads"
+            android:scaleType="fitXY" />
 
 
         <LinearLayout
