--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,15 +25,15 @@
         <com.example.user.seedapp.com.add.view.AutoScrollViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
-            android:layout_height="120dp"
+            android:layout_height="match_parent"
+            android:paddingBottom="10dp"
             />
 
 
         <com.viewpagerindicator.CirclePageIndicator
             android:id="@+id/indicator"
             android:layout_width="match_parent"
-            android:layout_height="15dp"
-            android:layout_marginTop="10dp"
+            android:layout_height="10dp"
             app:radius="4dp"
             app:fillColor="#88FF0000"
             app:pageColor="#FF888888"
