--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -26,7 +26,20 @@
         android:visibility="visible"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_weight="18">
+        android:layout_weight="9">
 
     </FrameLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="9">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listView"
+            android:clickable="true" />
+    </LinearLayout>
 </LinearLayout>
