--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -24,10 +24,25 @@
                 android:layout_centerHorizontal="true" />
         </RelativeLayout>
 
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:background="#ffff393b"
+            android:layout_weight="2">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/back_bt"
+                android:src="@android:drawable/arrow_down_float"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+
         <ScrollView
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="18"
+            android:layout_weight="16"
             android:background="#ffff393b"
             >
 
@@ -36,32 +51,32 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="คำร้อง "
-                    android:textSize="12dp"
-                    android:id="@+id/author"
-                    android:layout_gravity="center_horizontal" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:text="คำร้อง "-->
+                    <!--android:textSize="12dp"-->
+                    <!--android:id="@+id/author"-->
+                    <!--android:layout_gravity="center_horizontal" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="ทำนอง "
-                    android:textSize="12dp"
-                    android:id="@+id/tempo"
-                    android:layout_gravity="center_horizontal" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:text="ทำนอง "-->
+                    <!--android:textSize="12dp"-->
+                    <!--android:id="@+id/tempo"-->
+                    <!--android:layout_gravity="center_horizontal" />-->
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="เรียบเรียง "
-                    android:textSize="12dp"
-                    android:id="@+id/compose"
-                    android:layout_gravity="center_horizontal" />
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
+                    <!--android:text="เรียบเรียง "-->
+                    <!--android:textSize="12dp"-->
+                    <!--android:id="@+id/compose"-->
+                    <!--android:layout_gravity="center_horizontal" />-->
 
                 <TextView
                     android:layout_width="wrap_content"
