--- a/app/src/main/res/layout/fragment_list_page.xml
+++ b/app/src/main/res/layout/fragment_list_page.xml
@@ -59,7 +59,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/listView"
-                android:clickable="true" />
+                android:clickable="true"
+                android:layout_gravity="center"
+                android:dividerHeight="0dp" />
 
         </LinearLayout>
     </LinearLayout>
