--- a/app/src/main/res/layout/list_page_item.xml
+++ b/app/src/main/res/layout/list_page_item.xml
@@ -6,26 +6,19 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffffff"
-        android:paddingLeft="20dp">
+        android:layout_gravity="center_horizontal"
+        android:background="#000000">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="40dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text=" "
             android:id="@+id/textView"
             android:textSize="14dp"
-            android:gravity="center_vertical"
-            android:textColor="@android:color/black" />
+            android:textColor="#FFFFFF"
+            android:gravity="center_vertical|center_horizontal" />
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="1dp"
-            android:background="#c9000000"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentStart="true"></LinearLayout>
     </RelativeLayout>
 
 </LinearLayout>
