--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
                         android:layout_gravity="center"
                         android:layout_marginLeft="30dp"
                         android:id="@+id/btnSeed"
-                        android:src="@drawable/icon_seed_app_logo_75px_white"
+                        android:src="@drawable/menu2"
                         android:background="@null" />
                     <ImageButton
                         android:layout_width="wrap_content"
