--- a/app/src/main/res/layout/fragment_lyrics.xml
+++ b/app/src/main/res/layout/fragment_lyrics.xml
@@ -18,6 +18,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit ="marquee_forever"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
                 android:text="Now Playing : "
                 android:id="@+id/name"
                 android:layout_centerVertical="true"
