--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -41,6 +41,11 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:layout_marginTop="20dp"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
             android:text="Now Playing : คิดถึง - Bodyslam"
             android:id="@+id/textNowPlaying"
             android:layout_centerHorizontal="true"
@@ -60,7 +65,7 @@
             android:layout_height="150dp"
             android:layout_below="@+id/viewseparate"
             android:id="@+id/imageView3"
-            android:src="@drawable/bodyslam"
+            android:src="@drawable/cover_default"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:layout_alignStart="@id/imageView3"
@@ -148,6 +153,11 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="Next song : ไม่ต่างกัน - 25 Hours"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
             android:id="@+id/textNameSong"
             android:layout_below="@+id/view"
             android:layout_centerHorizontal="true"
