--- a/app/src/main/res/layout/fragment_youtube.xml
+++ b/app/src/main/res/layout/fragment_youtube.xml
@@ -12,6 +12,11 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit ="marquee_forever"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:scrollHorizontally="true"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Now Playing : "
             android:id="@+id/tv_name"
