--- a/app/src/main/res/layout/dj_infomation_page.xml
+++ b/app/src/main/res/layout/dj_infomation_page.xml
@@ -62,6 +62,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:text=""
+                    android:textSize="18dp"
                     android:id="@+id/online_time"
                     android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true" />
