--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -36,132 +36,221 @@
         android:layout_weight="5"
         android:orientation="vertical"
         android:id="@+id/linearLayout">
-        <TextView
-            android:layout_width="wrap_content"
+
+        <RelativeLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginTop="20dp"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit ="marquee_forever"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:scrollHorizontally="true"
-            android:text="Now Playing : คิดถึง - Bodyslam"
-            android:id="@+id/textNowPlaying"
-            android:layout_centerHorizontal="true"
-            android:textColor="@android:color/white" />
+            android:background="@android:color/black"
+            android:id="@+id/textNowPlayingLay">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:textSize="16dp"
+                android:ellipsize="marquee"
+                android:marqueeRepeatLimit ="marquee_forever"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:scrollHorizontally="true"
+                android:text="Now Playing : คิดถึง - Bodyslam"
+                android:id="@+id/textNowPlaying"
+                android:layout_centerHorizontal="true"
+                android:textColor="@android:color/white"
+                />
+        </RelativeLayout>
 
         <View
             android:layout_width="300dp"
             android:layout_height="2dp"
-            android:background="@android:color/black"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:layout_below="@+id/textNowPlaying"
+            android:layout_below="@+id/textNowPlayingLay"
             android:id="@+id/viewseparate"></View>
 
         <ImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_below="@+id/viewseparate"
+            android:layout_below="@+id/textNowPlayingLay"
             android:id="@+id/imageView3"
-            android:src="@drawable/cover_default"
+            android:src="@drawable/seed_head"
             android:layout_gravity="center_horizontal"
             android:layout_centerHorizontal="true"
             android:layout_alignStart="@id/imageView3"
             android:layout_marginTop="10dp"
             android:scaleType="fitXY" />
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="60dp"
-            android:layout_height="35dp"
-            android:text="MV"
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/bt_youtube"
             android:layout_alignTop="@+id/imageView3"
             android:layout_toEndOf="@+id/imageView3"
-            android:background="@android:color/black"
-            android:textColor="@android:color/white"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:shadowColor="@android:color/darker_gray"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />
+            android:src="@drawable/unlock_mv"
+            android:background="@null"
+            android:scaleType="fitXY"/>
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="60dp"
-            android:layout_height="35dp"
-            android:text="List"
-            android:id="@+id/bt_list"
-            android:background="@android:color/black"
-            android:textColor="@android:color/white"
-            android:shadowColor="@android:color/darker_gray"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            android:layout_below="@+id/bt_youtube"
-            android:layout_alignStart="@+id/bt_youtube"
-            android:layout_marginTop="10dp" />
+        <!--<Button-->
+            <!--style="?android:attr/buttonStyleSmall"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:text="MV"-->
+            <!--android:id="@+id/bt_youtube"-->
+            <!--android:layout_alignTop="@+id/imageView3"-->
+            <!--android:layout_toEndOf="@+id/imageView3"-->
+            <!--android:background="@android:color/black"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:layout_marginTop="10dp"-->
+            <!--android:shadowColor="@android:color/darker_gray"-->
+            <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />-->
 
         <ImageButton
-            style="?android:attr/buttonStyleSmall"
             android:layout_width="50dp"
-            android:layout_height="35dp"
-            android:id="@+id/bt_play"
-            android:background="@android:color/white"
-            android:layout_marginRight="20dp"
-            android:src="@drawable/btn_play"
-            android:shadowColor="@android:color/darker_gray"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
-            android:scaleType="fitXY"
-            android:layout_above="@+id/bt_lyrics"
-            android:layout_alignStart="@+id/viewseparate" />
+            android:layout_height="50dp"
+            android:id="@+id/bt_list"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/unlock_list"
+            android:background="@null"
+            android:layout_below="@+id/bt_youtube"
+            android:layout_alignStart="@+id/bt_youtube"
+            android:scaleType="fitXY"/>
 
-        <Button
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="60dp"
-            android:layout_height="35dp"
-            android:text="Lyrics"
+        <!--<Button-->
+            <!--style="?android:attr/buttonStyleSmall"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:text="List"-->
+            <!--android:id="@+id/bt_list"-->
+            <!--android:background="@android:color/black"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:shadowColor="@android:color/darker_gray"-->
+            <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"-->
+            <!--android:layout_below="@+id/bt_youtube"-->
+            <!--android:layout_alignStart="@+id/bt_youtube"-->
+            <!--android:layout_marginTop="10dp" />-->
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:id="@+id/bt_play"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/play_button"
+            android:background="@null"
+            android:layout_above="@+id/bt_lyrics"
+            android:layout_alignStart="@+id/viewseparate"
+            android:scaleType="fitXY"/>
+
+        <!--<ImageButton-->
+            <!--style="?android:attr/buttonStyleSmall"-->
+            <!--android:layout_width="50dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:id="@+id/bt_play"-->
+            <!--android:background="@android:color/white"-->
+            <!--android:layout_marginRight="20dp"-->
+            <!--android:src="@drawable/btn_play"-->
+            <!--android:shadowColor="@android:color/darker_gray"-->
+            <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"-->
+            <!--android:scaleType="fitXY"-->
+            <!--android:layout_above="@+id/bt_lyrics"-->
+            <!--android:layout_alignStart="@+id/viewseparate" />-->
+
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/bt_lyrics"
-            android:background="@android:color/black"
-            android:textColor="@android:color/white"
-            android:shadowColor="@android:color/darker_gray"
-            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/unlock_lylics"
+            android:background="@null"
             android:layout_below="@+id/bt_list"
             android:layout_alignStart="@+id/bt_list"
-            android:layout_marginTop="10dp" />
+            android:scaleType="fitXY"/>
 
-        <SeekBar
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:id="@+id/seekBar"
-            android:layout_below="@+id/imageView3"
-            android:layout_centerHorizontal="true"
-            android:max="100"
-            android:progress="0"
-            android:indeterminate="false" />
-        <View
-            android:layout_width="300dp"
-            android:layout_height="2dp"
-            android:background="@android:color/black"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@+id/seekBar"
-            android:id="@+id/view"
-            android:layout_marginTop="10dp"></View>
+        <!--<Button-->
+            <!--style="?android:attr/buttonStyleSmall"-->
+            <!--android:layout_width="60dp"-->
+            <!--android:layout_height="35dp"-->
+            <!--android:text="Lyrics"-->
+            <!--android:id="@+id/bt_lyrics"-->
+            <!--android:background="@android:color/black"-->
+            <!--android:textColor="@android:color/white"-->
+            <!--android:shadowColor="@android:color/darker_gray"-->
+            <!--android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"-->
+            <!--android:layout_below="@+id/bt_list"-->
+            <!--android:layout_alignStart="@+id/bt_list"-->
+            <!--android:layout_marginTop="10dp" />-->
 
-        <TextView
+        <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Next song : ไม่ต่างกัน - 25 Hours"
-            android:ellipsize="marquee"
-            android:marqueeRepeatLimit ="marquee_forever"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:scrollHorizontally="true"
-            android:id="@+id/textNameSong"
-            android:layout_below="@+id/view"
+            android:layout_below="@+id/imageView3"
+            android:layout_marginTop="25dp"
+            android:id="@+id/layout_seekBar"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp"
-            android:textColor="@android:color/white" />
+            android:background="@drawable/my_shape">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="3dp"
+                android:layout_marginBottom="3dp">
+
+                <ImageButton
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:id="@+id/bt_mute"
+                    android:src="@drawable/speaker"
+                    android:background="@null"
+                    android:scaleType="fitXY"/>
+                <!---->
+                <!--<ImageButton-->
+                    <!--android:layout_width="30dp"-->
+                    <!--android:layout_height="30dp"-->
+                    <!--android:id="@+id/imageButton" />-->
+
+                <SeekBar
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/seekBar"
+                    android:max="100"
+                    android:progress="0"
+                    android:indeterminate="false" />
+            </LinearLayout>
+
+        </GridLayout>
+
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layout_seekBar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/my_shape">
+
+            <!--android:ellipsize="marquee"-->
+            <!--android:marqueeRepeatLimit ="marquee_forever"-->
+            <!--android:focusable="true"-->
+            <!--android:focusableInTouchMode="true"-->
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Next song : ไม่ต่างกัน - 25 Hours"
+                android:textSize="16dp"
+                android:id="@+id/textNameSong"
+                android:textColor="@android:color/white"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
+        </RelativeLayout>
     </RelativeLayout>
 </LinearLayout>
